0028285: Configuration - add missing macro Standard_EXPORT to OpenGl_StateInterface subclasses