src/OpenGl/OpenGl_ShaderStates.hxx
@@ -27,7 +27,7 @@ class OpenGl_StateInterface
 public:
 
   //! Creates new state.
-  OpenGl_StateInterface();
+  Standard_EXPORT OpenGl_StateInterface();
 
   //! Returns current state index.
   Standard_Size Index() const { return myIndex; }
@@ -47,16 +47,16 @@ class OpenGl_ProjectionState : public OpenGl_StateInterface
 public:
 
   //! Creates uninitialized projection state.
-  OpenGl_ProjectionState();
+  Standard_EXPORT OpenGl_ProjectionState();
 
   //! Sets new projection matrix.
-  void Set (const OpenGl_Mat4& theProjectionMatrix);
+  Standard_EXPORT void Set (const OpenGl_Mat4& theProjectionMatrix);
 
   //! Returns current projection matrix.
-  const OpenGl_Mat4& ProjectionMatrix() const;
+  Standard_EXPORT const OpenGl_Mat4& ProjectionMatrix() const;
 
   //! Returns inverse of current projection matrix.
-  const OpenGl_Mat4& ProjectionMatrixInverse() const;
+  Standard_EXPORT const OpenGl_Mat4& ProjectionMatrixInverse() const;
 
 private:
 
@@ -72,16 +72,16 @@ class OpenGl_ModelWorldState : public OpenGl_StateInterface
 public:
 
   //! Creates uninitialized model-world state.
-  OpenGl_ModelWorldState();
+  Standard_EXPORT OpenGl_ModelWorldState();
 
   //! Sets new model-world matrix.
-  void Set (const OpenGl_Mat4& theModelWorldMatrix);
+  Standard_EXPORT void Set (const OpenGl_Mat4& theModelWorldMatrix);
 
   //! Returns current model-world matrix.
-  const OpenGl_Mat4& ModelWorldMatrix() const;
+  Standard_EXPORT const OpenGl_Mat4& ModelWorldMatrix() const;
 
   //! Returns inverse of current model-world matrix.
-  const OpenGl_Mat4& ModelWorldMatrixInverse() const;
+  Standard_EXPORT const OpenGl_Mat4& ModelWorldMatrixInverse() const;
 
 private:
 
@@ -97,16 +97,16 @@ class OpenGl_WorldViewState : public OpenGl_StateInterface
 public:
 
   //! Creates uninitialized world-view state.
-  OpenGl_WorldViewState();
+  Standard_EXPORT OpenGl_WorldViewState();
 
   //! Sets new world-view matrix.
-  void Set (const OpenGl_Mat4& theWorldViewMatrix);
+  Standard_EXPORT void Set (const OpenGl_Mat4& theWorldViewMatrix);
 
   //! Returns current world-view matrix.
-  const OpenGl_Mat4& WorldViewMatrix() const;
+  Standard_EXPORT const OpenGl_Mat4& WorldViewMatrix() const;
 
   //! Returns inverse of current world-view matrix.
-  const OpenGl_Mat4& WorldViewMatrixInverse() const;
+  Standard_EXPORT const OpenGl_Mat4& WorldViewMatrixInverse() const;
 
 private:
 
@@ -122,13 +122,13 @@ class OpenGl_LightSourceState : public OpenGl_StateInterface
 public:
 
   //! Creates uninitialized state of light sources.
-  OpenGl_LightSourceState();
+  Standard_EXPORT OpenGl_LightSourceState();
 
   //! Sets new light sources.
-  void Set (const OpenGl_ListOfLight* theLightSources);
+  Standard_EXPORT void Set (const OpenGl_ListOfLight* theLightSources);
 
   //! Returns current list of light sources.
-  const OpenGl_ListOfLight* LightSources() const;
+  Standard_EXPORT const OpenGl_ListOfLight* LightSources() const;
 
 private:
 
@@ -142,16 +142,16 @@ class OpenGl_ClippingState
 public:
 
   //! Creates new clipping state.
-  OpenGl_ClippingState();
+  Standard_EXPORT OpenGl_ClippingState();
 
   //! Returns current state index.
   Standard_Size Index() const { return myIndex; }
 
   //! Updates current state.
-  void Update();
+  Standard_EXPORT void Update();
 
   //! Reverts current state.
-  void Revert();
+  Standard_EXPORT void Revert();
 
 protected:
 
